test: Java11, Jetty9 用のテストを java11 プロファイルで実行できるように調整