@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.nablarch.framework</groupId>
@@ -20,8 +20,81 @@
   </parent>
 
   <properties>
-    <ecj.version>4.6.1</ecj.version>
+    <ecj.version>3.5.1</ecj.version>
+    <nablarch-testing-jetty.artifact>nablarch-testing-jetty6</nablarch-testing-jetty.artifact>
+    <javax-servlet.artifact>servlet-api</javax-servlet.artifact>
+    <javax-servlet.version>2.5</javax-servlet.version>
+    <env.resources>${project.basedir}/src/test/env/jetty6/resources</env.resources>
+    <env.additional-test-source>${project.basedir}/src/test/env/jetty6/java</env.additional-test-source>
   </properties>
+
+  <profiles>
+    <profile>
+      <id>java8</id>
+      <properties>
+        <ecj.version>4.6.1</ecj.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>java9</id>
+      <properties>
+        <ecj.version>4.6.1</ecj.version>
+        <junit.additionalArgLine>--add-modules java.activation,java.xml.bind</junit.additionalArgLine>
+      </properties>
+    </profile>
+    <profile>
+      <id>java11</id>
+      <properties>
+        <ecj.version>4.6.1</ecj.version>
+        <nablarch-testing-jetty.artifact>nablarch-testing-jetty9</nablarch-testing-jetty.artifact>
+        <javax-servlet.artifact>javax.servlet-api</javax-servlet.artifact>
+        <javax-servlet.version>3.1.0</javax-servlet.version>
+        <env.resources>${project.basedir}/src/test/env/jetty9/resources</env.resources>
+        <env.additional-test-source>${project.basedir}/src/test/env/jetty9/java</env.additional-test-source>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>com.nablarch.dev</groupId>
+          <artifactId>nablarch-test-support</artifactId>
+          <scope>test</scope>
+          <exclusions>
+            <exclusion>
+              <groupId>org.mortbay.jetty</groupId>
+              <artifactId>jsp-api-2.1-glassfish</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+
+        <dependency>
+          <groupId>com.sun.activation</groupId>
+          <artifactId>javax.activation</artifactId>
+          <version>1.2.0</version>
+          <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+          <version>2.3.1</version>
+          <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+          <version>2.3.1</version>
+          <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-core</artifactId>
+          <version>2.3.0.1</version>
+          <scope>compile</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 
   <dependencies>
 
@@ -64,6 +137,13 @@
     </dependency>
 
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>${javax-servlet.artifact}</artifactId>
+      <version>${javax-servlet.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
       <groupId>com.nablarch.framework</groupId>
       <artifactId>nablarch-common-jdbc</artifactId>
       <scope>test</scope>
@@ -80,7 +160,7 @@
         </exclusion>
       </exclusions>
     </dependency>
-    
+
     <dependency>
       <groupId>org.eclipse.jdt.core.compiler</groupId>
       <artifactId>ecj</artifactId>
@@ -94,7 +174,7 @@
       <version>5.3.6.Final</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.jmockit</groupId>
       <artifactId>jmockit</artifactId>
@@ -105,66 +185,11 @@
       <groupId>com.nablarch.dev</groupId>
       <artifactId>nablarch-test-support</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.mortbay.jetty</groupId>
-          <artifactId>jsp-api-2.1-glassfish</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <dependency>
       <groupId>com.nablarch.framework</groupId>
-      <artifactId>nablarch-testing-jetty9</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sun.activation</groupId>
-      <artifactId>javax.activation</artifactId>
-      <version>1.2.0</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-      <version>2.3.1</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sun.xml.bind</groupId>
-      <artifactId>jaxb-impl</artifactId>
-      <version>2.3.1</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sun.xml.bind</groupId>
-      <artifactId>jaxb-core</artifactId>
-      <version>2.3.0.1</version>
-      <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.servlet.jsp</groupId>
-      <artifactId>javax.servlet.jsp-api</artifactId>
-      <version>2.3.1</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.servlet.jsp.jstl</groupId>
-      <artifactId>javax.servlet.jsp.jstl-api</artifactId>
-      <version>1.2.1</version>
+      <artifactId>${nablarch-testing-jetty.artifact}</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -185,8 +210,30 @@
         <directory>src/test/java</directory>
       </testResource>
       <testResource>
-        <directory>${project.basedir}/src/test/env/jetty9/resources</directory>
+        <directory>${env.resources}</directory>
       </testResource>
     </testResources>
+
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.12</version>
+        <executions>
+          <execution>
+            <id>add-test-source</id>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${env.additional-test-source}</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 </project>
